[project]
name = "ans_client"
version = "0.0.1"
authors = [
  { name="Jordan Raychev", email="jpraychev@gmail.com" },
]
description = "Python API for SAP BTP Alert Notification Service"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jpraychev/ans-python"
Issues = "https://github.com/jpraychev/ans-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"